<resources>
    <string name="app_name">How\'s Weather?</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_favourite">Favourite</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra_violet</string>
    <string name="visibility">Visibility</string>
    <string name="how_s_weaher">How\'s Weather?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_fragment">Alerts</string>
    <string name="save">Save</string>
    <string name="fahrenheit">Fahrenheit(°F), (mile/hr)</string>
    <string name="kelvin">Kelvin(°K), (m/sec)</string>
    <string name="celsius">Celsius(°C), (m/sec)</string>
    <string name="weather_unit">Weather Unit</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="meter_second">Meter/ Second</string>
    <string name="km_hour">Km/ Hour</string>
    <string name="toMap">toMap</string>
    <string name="emptyFavList">Click the Button below to add a Favorite</string>
    <string name="remove">remove</string>
    <string name="fragment_show">Favorite</string>
    <string name="wind_unit">Temperature and wind speed</string>
    <string name="settings_changed">Settings changed</string>
    <string name="current">current</string>
    <string name="location_added">Location added to favorite</string>
    <string name="location_changed">Location changed</string>
    <string name="check_connection">Please check your internet connection</string>
    <string name="map">Map</string>
    <string name="choose_loc">choose location</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="startDate">Start Date:</string>
    <string name="end_date">End Date</string>
    <string name="ok">OK</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="add_alarm">click the button below to add alarm</string>
</resources>