<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_36sdp">

        <LinearLayout
            android:id="@+id/bigLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="36dp"
            android:gravity="center"
            android:orientation="horizontal">



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/_32sdp"
                app:cardBackgroundColor="#1B224C"
                android:elevation="12dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:textColor="@color/white"
                        android:text="@string/language"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radioGroupLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioBtnEnglish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/english" />

                        <RadioButton
                            android:id="@+id/radioBtnArabic"
                            android:layout_width="wrap_content"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:text="@string/arabic" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardWeatherUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bigLinear"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:elevation="12dp"
            app:cardBackgroundColor="#1B224C"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weatherUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:padding="12dp"
                    android:text="@string/wind_unit"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroupUnits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_5sdp"
                    android:layout_below="@+id/weatherUnit"
                    android:paddingEnd="@dimen/_5sdp">

                    <RadioButton

                        android:id="@+id/settingsRBCelsius"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/celsius" />

                    <RadioButton
                        android:id="@+id/settingsRBKelvin"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:text="@string/kelvin" />

                    <RadioButton
                        android:id="@+id/settingsRBFahrenheit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/fahrenheit" />

                </RadioGroup>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</ScrollView>