<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/alertRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:elevation="16dp"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/txtVFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startDate"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtVTo"
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_below="@+id/txtVFrom"
                android:text="@string/end_date"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/removeItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgDeleteAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/delete_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgDelete"
                    android:layout_alignParentEnd="true"
                    android:text="@string/remove" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>